# claude2go

./: README.de.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: roadmap.md
docs/superpowers/specs/: 2026-07-09-claude-to-go-design.md  2026-07-10-phone-frontend-design.md
src/claude_to_go/: __init__.py  app.py  audio.py  cli.py  config.py  doctor.py  i18n.py  logbook.py  prompts.py  remote_audio.py  risk.py  session.py  stt.py  tts.py  wake.py
src/claude_to_go/phone/: index.html
tests/: test_app_routing.py  test_i18n.py  test_logbook.py  test_risk.py  test_segmenter.py  test_stt_gate.py  test_tts_sanitize.py  test_wake.py
