[project]
name = "claude-to-go"
version = "0.1.0"
description = "Hands-free voice layer on top of Claude Code for working while driving"
requires-python = ">=3.11,<3.13"
dependencies = [
    "claude-agent-sdk>=0.2.114",
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "webrtcvad-wheels>=2.0.14",
    "aiohttp>=3.10",
    "qrcode>=7.4",
]

[project.scripts]
c2g = "claude_to_go.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_to_go"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_to_go/phone" = "claude_to_go/phone"

[tool.pytest.ini_options]
testpaths = ["tests"]
